<resources>
    <string name="app_name">todolist</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hint_insert_complete">Mock数据插入完成</string>
    <string name="priority">Priority</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="confirm">confirm</string>
    <string name="low">low</string>
</resources>
