<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_context"
        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:gravity="start|top"
        android:padding="4dp"
        android:textColor="#C0C0C0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textColor="#C0C0C0"
        android:textSize="18sp"
        android:padding="10dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/high_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/medium_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/low_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />
</LinearLayout>
